--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,5 +86,5 @@ nav:
       - Manage Company Division: 'categories/membership/manage-company-division.md'
     # - Reports:
   - FAQ: 'FAQ/faq-home.md'
-  - Brochures: 
+  #- Brochures: 
   - Developer Docs: 'developer-docs/dev-notes.md'
